{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Galaxy",
            "id": "75b29377-27d9-41b1-b419-c8cefe96c6df",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "3eb9eadb-860b-42bd-8111-1d1dba57e13a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "PassThrough",
                    "id": "9537f4fb-bc2c-44d8-99ac-dfa763492d6d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pan",
                    "type": "PassThrough",
                    "id": "03f153c9-f895-41f7-9192-f698bd21c9a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "e77abd48-5338-4b9e-8502-420a12387852",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "d3587abb-cf9e-4ec5-8e5f-de28a34faf5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleMouse",
                    "type": "Button",
                    "id": "48118c11-d1f8-4823-8843-441066a60857",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "PassThrough",
                    "id": "97aeeba6-72e6-4f9a-a30b-a568dc91afbc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DragSelect",
                    "type": "Button",
                    "id": "35736caf-6e91-4798-bb60-8b90cbd15af0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.5,pressPoint=0.4)",
                    "initialStateCheck": false
                },
                {
                    "name": "MultiSelect",
                    "type": "Button",
                    "id": "7f374cdc-1ec9-4468-941f-991ff741a8f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "6407a33c-10c9-44db-9255-a6bfb39f5cbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5671ce85-d39d-4dd8-935e-168347226283",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfea225d-ff10-4adf-b5bf-da6eb1014fe5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "4af43573-6f9e-4224-a2a3-19dfa179a28e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "444058c2-5cfb-46da-8d7a-2fe588628894",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "44ece609-4f1c-4484-a164-1d490f1264b7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a583ec92-b6da-4171-ac51-eadc8d083649",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "27c4d817-b86f-463c-8ced-c34ca071eabd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "357f8d90-c813-40b3-9688-d4a1447e1200",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7da857c-096c-4646-959d-73f9420184e6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1349d101-d694-403f-ad61-59136b476c91",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1378bbc-eb43-43ff-a28f-1788d1be1c00",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b6a9aec-91f0-4977-b8a8-f0f40065b92f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ShiftSelect",
                    "id": "b1f31e15-6a95-4a74-b71e-bad3f450a28e",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MultiSelect",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "6a2d9160-c629-4310-a59b-8c3381a46a6d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MultiSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "112e276f-45c9-48cd-b89a-515fa1ffcfa4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MultiSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "54bc96d0-fa73-41d8-944d-b54046ec2a8c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "System",
            "id": "3e9cee92-cf84-44b1-9929-4a88dedb9db7",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "d0082547-8874-48e3-a269-a13350de5bfc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "PassThrough",
                    "id": "52b30c49-9163-4bd7-91bf-17ea4be0ce73",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pan",
                    "type": "PassThrough",
                    "id": "925c426e-23d3-4c2e-ab38-0e1743b8316a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "e223cd3e-0044-446c-84a9-6267f1f71b01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "de31746b-29ae-4dc4-a18f-7a9be9aec4d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleMouse",
                    "type": "Button",
                    "id": "8f7965c5-5290-4063-9eb8-dd1d71c75668",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "PassThrough",
                    "id": "845c8c57-6984-476f-a132-54d30f46d563",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DragSelect",
                    "type": "Button",
                    "id": "17d42e16-96d3-4926-be31-56c659d47db2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.5,pressPoint=0.4)",
                    "initialStateCheck": false
                },
                {
                    "name": "MultiSelect",
                    "type": "Button",
                    "id": "cd6718c9-cc01-441d-a643-52c2b5b41162",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "5fd172a9-ac3a-47e3-9d87-bf2e3c0c836b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ece887e0-cef7-4121-9c76-9b98e1ffe7eb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b2bdc8e-a4a2-43a9-a392-23d010706162",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5ba841e-c77c-4911-bc59-43abc649aea8",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82bc80b4-64cb-41df-8af7-65970c3b0021",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c29aa976-4f6b-459f-91b4-f2e267bc2ccf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c13bb3f2-3e85-4c30-a9b0-54fdfaa51750",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1eeeff9-2dbe-45ac-8b5b-f269ca88eff3",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eac21350-0677-495f-9706-fea5d4046141",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ShiftSelect",
                    "id": "976085f8-b0ff-4057-b395-a928b154d5d6",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MultiSelect",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "2231e6c5-aee6-47d5-89d2-28eab64a486f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MultiSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "f8efff0e-9982-48ce-94b6-3091863c10fe",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MultiSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fa01b64f-5450-404d-8b60-a176c308dd6e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "83ae5299-f5c5-4541-8317-256a22db3f9b",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "8435899f-1f14-4764-ac63-5aee6cdf3ecc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "Button",
                    "id": "28524d7e-310b-4605-826c-e362600e2044",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47ebc53f-e88f-408f-a630-8d916b874812",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26c2b27c-867e-4b2a-beae-1a71d2cac57a",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}